	  detected. We CANNOT use block_read_full_page() at all anywhere! This
	  is because initialized_size can lie within a block and ntfs_get_block
	  has no way to tell block_read_full_page about it. So our readpage
	  functions need to clone block_read_full_page and modify it to cope
	  with the significance of the different attribute sizes.
	  Still need to go through:
		aops.c, attrib.c, compress.c, dir.c, mft.c
	- Find and fix bugs.
	- W.r.t. s_maxbytes still need to be careful on reading/truncating as
	  there are dragons lurking in the details, e.g. read_inode() currently
	  does no checks for file size wrt s_maxbytes. So what happens when a
	  user open()s a file with i_size > s_maxbytes? Should read_inode()
	  truncate the visible i_size? Will the user just get -E2BIG (or
	  whatever) on open()? Or will (s)he be able to open() but lseek() and
	  read() will fail when s_maxbytes is reached? -> Investigate this!
	- Perhaps don't bother getting the run list in ntfs_read_inode() at
	  all. But we do have to find the data/index root attribute to get the
	  inode size so we might want to decompress the mapping pairs of the
	  first extent in there anyway. -> Ponder this. Directory listings
	  would have significant speedups but the first access to each file/dir
	  would have a small speed penalty.
	- Implement/allow non-resident index bitmaps in ntfs_readdir().
	- vcn_to_lcn() should somehow return the correct pointer within the
	  ->run_list so we can get at the lcns for the following vcns, this is
	  strictly a speed optimization. Obviously need to keep the ->run_list
	  locked or RACE. load_attribute_list() which we call without any locks
	  held already performs such an optimization but that is no longer
	  possible when using the spinlock on the run lists as this would sleep
	  in between. But now we have a semaphore so are ok. Update
	  load_attribute_list to use the semaphore so can be called outside